<resources>
    <string name="app_name">Scrappify</string>
    <string name="username">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_text">Login</string>
    <string name="dont_have_account">¿No tienes una cuenta?, </string>
    <string name="create_account">Crea una aquí.</string>
    <string name="hint_email">Correo electronico</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_passwd">Contraseña</string>
    <string name="hint_repeat_passwd">Repetir contraseña</string>
    <string name="joinus_button_text">UNETE</string>
    <string name="toolbar_title_create_account">Crear Cuenta</string>
    <string name="login_faliure">Ocurrio un error: </string>
</resources>
